--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libsim (2.6.10-1) unstable; urgency=low
+
+  * Reflecting the upstream version
+
+ -- Daniele Branchini <dbranchini@arpa.emr.it>  Mon, 21 Sep 2009 11:52:37 +0100
+
 libsim (2.6.4-1) unstable; urgency=low
 
   * Reflecting the upstream version and enabling
