Tutorial on v7d_transform and improvement in documentation.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@790 500a5620-302c-0410-bb8c-d54761bbe776

--- a/doc/mainpage.dox
+++ b/doc/mainpage.dox
@@ -25,4 +25,7 @@ cercheremo di fare il nostro meglio per migliorarne la chiarezza
 strada facendo. Intanto consigliamo di cominciare aprendo l'etichetta
 "sezioni" in cima alla pagina e accedendo da lì ai moduli che
 interessano.
+
+Vedi anche: \ref v7d_transform_tut
+.
 */
