Set station id ana variable when interpolating on polygons.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@806 500a5620-302c-0410-bb8c-d54761bbe776

--- a/doc/v7d_transform_tut.dox
+++ b/doc/v7d_transform_tut.dox
@@ -47,9 +47,11 @@ format:
  - csv human-readable files (csv driver)
  - grib gridded format (if a gridding transformation is applied).
 
-The output format has to be declared with the \c --output-format=
-command line argument which can take the values \c BUFR, \c
-CREX, \c native, \c csv or \c grib_api.
+The output format has to be declared with the \c
+--output-format=name[:template] command line argument. Here \c name
+can take the values \c BUFR, \c CREX, \c native, \c csv or \c
+grib_api. For \c BUFR, \c CREX and \c grib_api a template can be
+specified.
 
 The name of the output file is indicated as the last argument on the
 command line, a \c - character indicates output to stdout (not supported
@@ -281,34 +283,6 @@ and even intervals, then it transforms them into instantaneous data
 
 \image html stat_proc_disagg_inst.png
 
-\section spaceproc Space transformations - applying area averages and interpolations
-
-With v7d_transform it is possible to perform geographical
-transformations befor and/or after the statistical processing.
-
-\subsection preinterp Prelimnary transformation
-
-Before the statistical processing, it is possible to perform a
-sparse-point to sparse-point transformation, which has to be specified
-in the form \c --pre-trans-type=trans-type:subtype.
-
-The only transformation type that makes sense here is \c
-polyinter:average which averages the data on a set of polygons
-provided in shapefile format with the options \c --coord-file= and \c
---coord-format=shp.
-
-\subsection postinterp
-
-After the statistical processing, it is possible to perform a
-sparse-point to grid transformation, which has to be specified
-in the form \c --post-trans-type=trans-type:subtype.
-
-The transformation types that make sense here are \c inter:linear,
-which linearly interpolates the sparse data on a regular grid by
-triangulation, and \c boxinter:average, which computes the value at each
-grid point as the average of the sparse input data on the
-corresponding grid box.
-
 \section exdataproc Examples of data processing
 
 This example accumulates precipitation on 24 hours intervals, starting
@@ -348,5 +322,43 @@ while these are actually averages of daily maximum temperatures, so
 part of the information is lost and the user must keep track of it
 autonomously.
 
+\section spaceproc Space transformations - applying area averages and interpolations
+
+With v7d_transform it is possible to perform geographical
+transformations before and/or after the statistical processing.
+
+\subsection preinterp Preliminary transformation
+
+Before the statistical processing, it is possible to perform a
+sparse-point to sparse-point transformation, which has to be specified
+in the form \c --pre-trans-type=trans-type:subtype.
+
+The only transformation type that makes sense here is \c
+polyinter:average which averages the data on a set of polygons
+provided in shapefile format with the options \c --coord-file= and \c
+--coord-format=shp.
+
+The output volume will contain a pseudo-station per each polygon
+contained in the shapefile, with the coordinates equal to the
+coordinates of the polygon centroid and in the same order.
+
+\subsection postinterp Final transformation
+
+After the statistical processing, it is possible to perform a
+sparse-point to grid transformation, which has to be specified
+in the form \c --post-trans-type=trans-type:subtype.
+
+The transformation types that make sense here are \c inter:linear,
+which linearly interpolates the sparse data on a regular grid by
+triangulation, and \c boxinter:average, which computes the value at each
+grid point as the average of the sparse input data on the
+corresponding grid box.
+
+The only output format which makes sense here is \c grib_api:template,
+where \c template indicates a grib file which will be used as a
+template for the output grib file and which defines also the grid over
+which the interpolation is made.
+
+\section exinterp Examples of space transformations
 
  */
