--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libsim (4.0.0-813) unstable; urgency=low
+
+  * Reflecting the upstream version
+
+ -- Daniele Branchini <dbranchini@arpa.emr.it>  Mon, 10 Dec 2010 09:52:34 +0100
+
 libsim (4.0.0-807) unstable; urgency=low
 
   * Reflecting the upstream version
