new match method for char
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@914 500a5620-302c-0410-bb8c-d54761bbe776

--- a/README
+++ b/README
@@ -75,3 +75,6 @@ Contact informations for ARPA-SIM:
   Email: urpsim@smr.arpa.emr.it
   Website: http://www.arpa.emr.it/sim/
 
+
+string_match derived by http://sourceforge.net/projects/flibs
+$Copyright (c) 2008, Arjen Markus
