--- a/doc/mainpage.dox
+++ b/doc/mainpage.dox
@@ -26,6 +26,6 @@ strada facendo. Intanto consigliamo di cominciare aprendo l'etichetta
 "sezioni" in cima alla pagina e accedendo da lì ai moduli che
 interessano.
 
-Vedi anche: \ref v7d_transform_tut
+Vedi anche: \ref v7d_transform_tut e \ref space_transform
 .
 */
