--- a/doc/space_transform.dox
+++ b/doc/space_transform.dox
@@ -7,9 +7,12 @@ as \a vg6d_subarea, \a vg6d_transform, \a vg6d_getpoint, and \a
 v7d_transform.
 
 Transformations are defined at least by 2 parameters named \a type and
-\a subtype. The transformations are divided into two main groups:
+\a subtype. The transformations operate separately either on the
+vertical or on the horizontal structure of the coordinate
+system. Horizontal tranformations are divided into two main groups:
 transformations conserving the input point structure and
-transformations to an arbitrary grid or set of sparse points.
+transformations to an arbitrary grid or set of sparse points. Vertical
+transformations are just vertical transformations for the moment.
 
 \section structcons Transformations conserving the input grid structure
 
@@ -118,5 +121,149 @@ defined as the centroids of the polygons:
  - sub_type='percentile' the function used is a requested percentile
    of the input points distribution, the percentile value, in the
    interval [0,100] has to be additionally provided.
+
+\section verttrans Vertical transformations
+
+Vertical levels and layers are specified in analogy with grib2 coding
+by means of one or two surfaces with type of coordinate specified as
+in the following table:
+
+|level code|type of level and unit|associated variable and unit|
+|----------|----------------------|----------------------------|
+| 20  | isothermal level (K) | B12101 (K)|
+| 100 | isobaric level (Pa) | B10004 (Pa)|
+| 102 | height over sea level (mm) | B10007 (m)|
+| 103 | height over surface (mm) | B10007 (m) + surface orography|
+| 104 | sigma level (nondimensional)| - |
+| 105 | hybrid level (nondimensional)| - |
+| 106 | depth below land surface (mm)| - |
+| 107 | isentropical (K) | B12192 (K)|
+| 108 | level at specified pressure difference from ground to level (Pa)| - |
+
+Only the vertical levels having an associated B table variable are
+fully supported as output target level of vertical interpolations in
+libsim, the other ones are only supported as input levels for vertical
+interpolations when accompanied by a variable specifying the vertical
+coordinate of the input levels, or for transformations between the
+same type of vertical coordinates.
+
+\subsection verteq Vertical interpolation between the same type of coordinates
+
+This is a simple special case, where there is no need to specify the
+vertical output coordinate in the input system, but only the list of
+ouput levels. The following example shows hot to interpolate data on
+isobaric surfaces to a different set of isobaric surfaces:
+
+\code
+
+vg6d_transform --trans-type=vertint --sub-type=linear \
+ --trans-level-type=100,,100, --trans-level-list=85000,92500 \
+ input_isobaric.grib output_isobaric.grib
+
+\endcode
+
+Notice that vertical interpolations where pressure is the vertical
+coordinate are computed linearly in the logarithm of pressure.
+
+It is also possible to from layers between two levels of equal type to
+levels and vice-versa, with the simplification that the coordinate
+associated to a layer is the average of the coordinates of the levels
+above and below (log-average for pressure levels).
+
+In the case of hybrid levels, where the vertical coordinate is an
+integer index, the list of output levels can be automatically
+generated if not provided. This example shows how to extract vertical
+coordinate information from COSMO model output for interpolating data
+on native model level/layers:
+
+\code
+# extract height of model levels from constant file
+grib_copy -w typeOfLevel=hybrid,shortName=h lfff00000000c hyblevcoord.grib
+# interpolate height of hybrid levels to hybrid layers, here automatic
+# generation of level list takes place; --component-flag=1 is needed,
+# but it is too complicate to explain here why
+vg6d_transform --trans-type=vertint --sub-type=linear \
+ --trans-level-type=105,,105,105 --component-flag=1 \
+ hyblevcoord.grib hyblaycoord.grib
+
+# extract level corresponding to surface (=orography), needed for
+# interpolation to level type 103, assume we have 45 vertical layers
+grib_copy -w shortName=h,level=46 lfff00000000c tmpgrib
+grib_set -s typeOfLevel=surface,level=0  tmpgrib surfh.grib
+
+# append height of surface orography to the coordinate files for use
+# with output type of level 103
+cat hyblevcoord.grib surfh.grib > hyblevcoord_surf.grib
+cat hyblaycoord.grib surfh.grib > hyblaycoord_surf.grib
+
+\endcode
+
+\subsection vertdiff Vertical interpolation to a different type of coordinate
+
+When the vertical corodinate system is different in input and in
+output, the coordinates of each input point in terms of the output
+coordinate system has to be specified.
+
+This can be done either through an external coordinate file or by
+taking the coordinate from the input dataset. The first case is
+suitable when output coordinates expressed in the input coordinate
+system are constant in time, while the second is suitable for output
+coordinates that vary with time. In both cases, the variable
+expressing the coordinate value must be defined on the same input
+levels as the data to be interpolated and must have a parameter
+matching the one in the above table.
+
+The following example shows how to interpolate gridded data from input
+hybrid coordinate system (code 105) to height system (code 102) by
+externally providing the coordinate of all the input levels in the
+output coordinate system (height):
+
+\code
+# filter data on hybrid layers
+grib_copy -w typeOfLevel=hybridLayer lfff00000000 lfff00000000_layer.grib
+# when wind components and staggered grid are involved I may need a
+# preliminary destaggering/unrotation step
+vg6d_transform --a-grid \
+ lfff00000000_layer.grib lfff00000000_layer_destag_unrot.grib
+# interpolate to levels at a height over sea level
+# using coordinate file produced in the previous example
+vg6d_transform --trans-type=vertint --sub-type=linear \
+ --trans-level-type=105,105,102, \
+ --trans-level-list=100000,200000,300000,400000 \
+ --coord-file=hyblaycoord.grib --coord-format=grib_api \
+ lfff00000000_layer_destag_unrot.grib lfff00000000z1.grib
+
+# filter data on hybrid levels
+grib_copy -w typeOfLevel=hybrid lfff00000000 lfff00000000_level.grib
+# interpolate to levels at a height over sea level
+# using coordinate file produced in the previous example
+vg6d_transform --trans-type=vertint --sub-type=linear \
+ --trans-level-type=105,,102, \
+ --trans-level-list=100000,200000,300000,400000 \
+ --coord-file=hyblevcoord.grib --coord-format=grib_api \
+ lfff00000000_level.grib lfff00000000z2.grib
+\endcode
+
+If height over surface (103) is desired instead of height over sea
+level, then \c 102 has to be replaced with \c 103 and the coordinate
+files containing also surface orography \c hyblevcoord_surf.grib and
+\c hyblaycoord_surf.grib produced in the previous example shoud be
+used in place of \c hyblevcoord.grib and \c hyblaycoord.grib.
+
+The following example shows how to interpolate gridded data from input
+hybrid coordinate system to pressure system, assuming that the
+time-varying pressure field on the input model layers is included in
+the input dataset:
+
+\code
+vg6d_transform --trans-type=vertint --sub-type=linear \
+ --trans-level-type=105,,100, \
+ --trans-level-list=50000,85000,92500 \
+ lfff00000000 lfff00000000p.grib
+\endcode
+
+For completeness, also the pressure field in this case will be
+contained in the output file although it will be constant within
+numerical precision on the output levels.
 
 */
