--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libsim (7.1.2) unstable; urgency=medium
+
+  * Reflecting the upstream version
+
+ -- Emanuele Di Giacomo <edigiacomo@arpae.it>  Wed, 19 Oct 2022 14:14:35 +0200
+
 libsim (4.0.0-847) unstable; urgency=low
 
   * Reflecting the upstream version
