--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libsim (7.1.6-1) unstable; urgency=medium
+
+  * Bugfix
+
+ -- Emanuele Di Giacomo <edigiacomo@arpae.it>  Tue, 30 May 2023 15:14:35 +0200
+
 libsim (7.1.2-1) unstable; urgency=medium
 
   * Reflecting the upstream version
