--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libsim (7.1.6-2) unstable; urgency=medium
+
+  * Rebuild against dballef 9.5-2 to support BUFR
+
+ -- Emanuele Di Giacomo <edigiacomo@arpae.it>  Tue, 20 Jun 2023 07:44:02 +0200
+
 libsim (7.1.6-1) unstable; urgency=medium
 
   * Bugfix
