--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libsim (7.1.6-5) unstable; urgency=medium
+
+  * Exclude /usr/bin/dba_qcfilter again
+
+ -- Emanuele Di Giacomo <edigiacomo@arpae.it>  Tue, 20 Jun 2023 16:59:28 +0200
+
 libsim (7.1.6-4) unstable; urgency=medium
 
   * Exclude /usr/bin/dba_qcfilter again
