--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libsim (7.1.6-7) unstable; urgency=medium
+
+  * Exclude /usr/bin/dba_qcfilter again
+
+ -- Emanuele Di Giacomo <edigiacomo@arpae.it>  Tue, 20 Jun 2023 19:03:42 +0200
+
 libsim (7.1.6-6) unstable; urgency=medium
 
   * Exclude /usr/bin/dba_qcfilter again
